install gh pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://iasminln.github.io/gerador-curriculo",
+  "homepage": "https://iasminln.github.io/gerador-curriculo/",
   "name": "gerador-curriculo",
   "private": true,
   "version": "0.0.0",
