--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
+    "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-svgr": "^3.2.0"
   },
   "devDependencies": {
